crates/pg_syntax/tests/snapshots/postgres_regress/timestamptz@38.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO TIMESTAMPTZ_TBL VALUES ('1997-02-10 17:32:01-0800');"
---
InsertStmt@0..64
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..27
    Ident@12..27 "TIMESTAMPTZ_TBL"
  Whitespace@27..28 " "
  SelectStmt@28..62
    Values@28..34 "VALUES"
    Whitespace@34..35 " "
    Ascii40@35..36 "("
    List@36..62
      AConst@36..62
        Sconst@36..62 "'1997-02-10 17:32:01- ..."
  Ascii41@62..63 ")"
  Ascii59@63..64 ";"

