crates/pg_syntax/tests/snapshots/postgres_regress/timestamptz@42.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO TIMESTAMPTZ_TBL VALUES ('2001-09-22T18:19:20');"
---
InsertStmt@0..59
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..27
    Ident@12..27 "TIMESTAMPTZ_TBL"
  Whitespace@27..28 " "
  SelectStmt@28..57
    Values@28..34 "VALUES"
    Whitespace@34..35 " "
    Ascii40@35..36 "("
    List@36..57
      AConst@36..57
        Sconst@36..57 "'2001-09-22T18:19:20'"
  Ascii41@57..58 ")"
  Ascii59@58..59 ";"

